Fixed card spacing issue

--- a/clients/web/react/src/_components/component.module.css
+++ b/clients/web/react/src/_components/component.module.css
@@ -41,3 +41,7 @@
 .section-divider {
   border-top: 2px #e7e7e7 solid;
 }
+
+.cardSpacing {
+  margin-bottom: 1em;
+}
